--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: morning
+
 on:
   schedule:
-    - cron:  '20 8 * * *'
+  - cron:  '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   send_message:
